--- a/ex3/index3.html
+++ b/ex3/index3.html
@@ -13,7 +13,7 @@
                     <img src="imagens/logo-white.png">
                  </a>
               </div>
-              <div id="menu principal">
+              <div id="menu">
               <ul>
                 <li>
                     <span>01</span>
@@ -55,6 +55,9 @@
             </div>
             </nav>
         </header>
+        <section>
+            
+        </section>
     </body>
 </html>
  
