--- a/ex3/index3.html
+++ b/ex3/index3.html
@@ -2,7 +2,7 @@
 <html lang= "pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Parallelo</title> 
+        <title>Parallelo Arquitetura e Construção</title> 
         <link rel="stylesheet" href="css/style3.css">
     </head>
     <body>
@@ -56,7 +56,29 @@
             </nav>
         </header>
         <section>
-            
+            <div class="icons">
+                <div class="icon"><img src="imagens/icones/pencil-and-ruler.png"></div>
+                <div class="icon"><img src="imagens/icones/ruler.png"></div>
+                <div class="icon"><img src="imagens/icones/pens-in-cup.png"></div>
+            </div>
+            <div class="txt">
+                <h6><!--qnt menor o num, maior o titulo-->
+                    "A arquitetura é a arte que determina a identidade do nosso tempo e melhora a vida das pessoas." <i>Santiago Calatrava</i>
+                </h6>
+            </div>
+        </section>
+        <section class="trabalhos">
+            <div class="header">
+                <h4>
+                    Nossos
+                </h4>
+                <h1>
+                    Projetos
+                </h1>
+                <h6>
+                    Concebemos ideias e concretizamos sonhos.
+                </h6>
+            </div>
         </section>
     </body>
 </html>
